<resources>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="afw_app_name">AutoFloatWindow</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="application_name">Launcher</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="auxin">Auxin</string>
    <string name="avin_app_name">AVIN</string>
    <string name="avin_back">Auxin</string>
    <string name="avin_detecting">Detecting Signal</string>
    <string name="avin_no_signal">NO SIGNAL!</string>
    <string name="avin_tip_parking">For driving safety, please pay attention to driving!</string>
    <string name="browser_app_name">File Explorer</string>
    <string name="bt_app_name">BTSuite</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="can_app_name">CAN</string>
    <string name="cancel_action">Cancel</string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="cling_dismiss">OK</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="custom_workspace_cling_description_1" />
    <string name="custom_workspace_cling_description_2" />
    <string name="custom_workspace_cling_title_1" />
    <string name="custom_workspace_cling_title_2" />
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="dvr_app_name">DVR</string>
    <string name="eq_app_name">EQ</string>
    <string name="external_drop_widget_error">"Couldn't drop item on this Home screen."</string>
    <string name="external_drop_widget_pick_format">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="fbox_accelerate">Accelerate</string>
    <string name="fbox_ap">AP</string>
    <string name="fbox_aux1">AUX</string>
    <string name="fbox_aux2">AUX2</string>
    <string name="fbox_bt">bluetooth</string>
    <string name="fbox_car_settings">C-CAR</string>
    <string name="fbox_clear_memorry">Kill %1$s process,release %2$s (M)memory</string>
    <string name="fbox_date">Date</string>
    <string name="fbox_ipod">IPOD</string>
    <string name="fbox_light">Light</string>
    <string name="fbox_light_hight_tx">hight</string>
    <string name="fbox_light_low_tx">dim</string>
    <string name="fbox_light_medium_tx">medium</string>
    <string name="fbox_reset">Reboot</string>
    <string name="fbox_system_settings">Settings</string>
    <string name="fbox_wlan">WLAN</string>
    <string name="fm_app_name">Radio</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="folder_name" />
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="folder_opened">Folder opened, %1$d by %2$d</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gps_app_name">GPS</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="group_widgets">Widgets</string>
    <string name="help_url" />
    <string name="home">Home</string>
    <string name="home_360">360 Panoramic</string>
    <string name="home_360_text">Panoramic view monitoring</string>
    <string name="home_NaviTip">No Navi</string>
    <string name="home_a2dp">BT Music</string>
    <string name="home_add">Add</string>
    <string name="home_app">Apps</string>
    <string name="home_app_lc">Android</string>
    <string name="home_app_text"></string>
    <string name="home_atv">ATV</string>
    <string name="home_aux">AUX</string>
    <string name="home_aux_text">Input the AUX audio.</string>
    <string name="home_avin">AVIN</string>
    <string name="home_avm">AVM</string>
    <string name="home_browser">Browser</string>
    <string name="home_browser_text1">Please confirm the connected network.</string>
    <string name="home_browser_text2">High speed Internet.</string>
    <string name="home_bt">Bluetooth</string>
    <string name="home_bt_connected">Bluetooth device connected</string>
    <string name="home_bt_disconnected">No Bluetooth device connected</string>
    <string name="home_bt_lc">Phone</string>
    <string name="home_bt_text">Wireless communication equipment.</string>
    <string name="home_calculator">Calculator</string>
    <string name="home_calendar">Calendar</string>
    <string name="home_caninfo_park_close">On</string>
    <string name="home_caninfo_park_open">Off</string>
    <string name="home_caninfo_safe_close">On</string>
    <string name="home_caninfo_safe_open">Off</string>
    <string name="home_car_media">Enter the original vehicle media</string>
    <string name="home_carinfo">Car info</string>
    <string name="home_carinfo_lc">LCD instrument</string>
    <string name="home_carinfo_new">Vehicle Info.</string>
    <string name="home_carinfo_new_lfe">Dashboard</string>
    <string name="home_carinfo_text">Vehicle Info.</string>
    <string name="home_carlife">Carlife</string>
    <string name="home_carnetwork">Network of vehicles.</string>
    <string name="home_carnetwork_text">Rich automotive applications.</string>
    <string name="home_carplay">CarPlay</string>
    <string name="home_carsetting">Car Setting</string>
    <string name="home_chooser_wallpaper">Choose wallpaper from</string>
    <string name="home_download">DownLoad</string>
    <string name="home_dtv">DTV</string>
    <string name="home_dvr">Car Dvr</string>
    <string name="home_dvr_text">Record traffic images and sound.</string>
    <string name="home_eq">EQ</string>
    <string name="home_filebrowser">FileBrowser</string>
    <string name="home_front_camera">Front camera</string>
    <string name="home_hand_brake">Hand brake</string>
    <string name="home_link">AutoLink</string>
    <string name="home_loading">Loading...</string>
    <string name="home_main">Auto Home</string>
    <string name="home_movie">Video</string>
    <string name="home_music">Music</string>
    <string name="home_mybmw">My Car</string>
    <string name="home_mybmw_lc">Car Media</string>
    <string name="home_mybmw_lfe">Car Info</string>
    <string name="home_mybmw_text"></string>
    <string name="home_navi">Navi</string>
    <string name="home_navi_lfe">Navigation</string>
    <string name="home_navi_text">Online map, real time road conditions</string>
    <string name="home_oil_left">Oil left</string>
    <string name="home_out_temp">Outside temperature</string>
    <string name="home_phonelink">PhoneLink</string>
    <string name="home_phonelink_text"></string>
    <string name="home_picture">Picture</string>
    <string name="home_radio">Radio</string>
    <string name="home_safebelt">Safe belt</string>
    <string name="home_setting">Settings</string>
    <string name="home_setting_text"></string>
    <string name="home_swc">SWC</string>
    <string name="home_theme">Theme</string>
    <string name="home_theme_effieicnt_text">EFFIEICNT</string>
    <string name="home_theme_enabled">Enabled</string>
    <string name="home_theme_personal_text">PERSONAL</string>
    <string name="home_theme_sport_text">SPORT</string>
    <string name="home_tpms">TPMS</string>
    <string name="home_tv">TV</string>
    <string name="home_unknow">unknown</string>
    <string name="home_userguide">UserGuide</string>
    <string name="home_video_text"></string>
    <string name="home_weixin">WeChat assistant</string>
    <string name="home_weixin_text">Instant messaging tools.</string>
    <string name="home_zlink">ZLink</string>
    <string name="home_zlink_lfe">CarAutoPlay</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="image_app_name">Image</string>
    <string name="image_btn_back">back</string>
    <string name="image_btn_next">Next</string>
    <string name="image_btn_pause">Pause</string>
    <string name="image_btn_play">Play</string>
    <string name="image_btn_pre">Prev</string>
    <string name="image_btn_rotate">rotate</string>
    <string name="image_btn_setwallpaper">wallpaper</string>
    <string name="image_btn_zoomin">zoom in</string>
    <string name="image_btn_zoomout">zoom out</string>
    <string name="image_decode_err_msg">decode image failed!</string>
    <string name="image_error_decode">decode failed</string>
    <string name="image_error_download">download failed</string>
    <string name="image_error_io">open image file failed</string>
    <string name="image_error_toolarge">too large, decode failed</string>
    <string name="image_first_pic_msg">It is the first picture!</string>
    <string name="image_last_pic_msg">It is the last picture!</string>
    <string name="image_no_pic_msg">no image file</string>
    <string name="image_scanning">Scaing......</string>
    <string name="image_tips_setwallpaper_failed">Set wallpaper failed!</string>
    <string name="image_tips_setwallpaper_success">Set wallpaper success!</string>
    <string name="image_title_media">media</string>
    <string name="image_title_music">Music</string>
    <string name="image_title_photo">Image</string>
    <string name="image_title_video">Video</string>
    <string name="image_viewpager_indicator">%1$d/%2$d</string>
    <string name="info_target_label">App info</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="launcher_frist_button_title" />
    <string name="launcher_frist_open_tips" />
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="media_app_name_music">Music</string>
    <string name="scene_name_default">default</string>
    <string name="scene_name_red">red</string>
    <string name="scene_title_default">Default</string>
    <string name="scene_title_red">Red</string>
</resources>