<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/main_theme_personal" android:background="@drawable/bmw_id8_orange_theme_personal_selector" android:layout_width="285.0dp" android:layout_height="394.0dp">
        <TextView android:layout_marginTop="10.0dp" android:text="@string/home_theme_personal_text" style="@style/bmw_orange_id8_main_page_icon_title" />
        <com.android.launcher2.popuView.MarqueeTextView android:id="@id/main_theme_personal_enabled" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dp" android:text="@string/home_theme_enabled" android:layout_marginStart="40.0dp" android:layout_marginEnd="40.0dp" style="@style/bmw_orange_id8_main_page_icon_text_style" />
    </FrameLayout>
    <Space android:layout_width="16.0dp" android:layout_height="match_parent" />
    <FrameLayout android:id="@id/main_theme_sport" android:background="@drawable/bmw_id8_orange_theme_sport_selector" android:layout_width="285.0dp" android:layout_height="394.0dp">
        <TextView android:textColor="@color/bmw_id8_red_desk_icon_title_color" android:layout_marginTop="10.0dp" android:text="@string/home_theme_sport_text" style="@style/bmw_orange_id8_main_page_icon_title" />
        <com.android.launcher2.popuView.MarqueeTextView android:id="@id/main_theme_sport_enabled" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dp" android:text="@string/home_theme_enabled" android:layout_marginStart="40.0dp" android:layout_marginEnd="40.0dp" style="@style/bmw_orange_id8_main_page_icon_text_style" />
    </FrameLayout>
    <Space android:layout_width="16.0dp" android:layout_height="match_parent" />
    <FrameLayout android:id="@id/main_theme_effieicnt" android:background="@drawable/bmw_id8_orange_theme_effieicnt_selector" android:layout_width="285.0dp" android:layout_height="394.0dp">
        <TextView android:textColor="@color/bmw_id8_blue_desk_icon_title_color" android:layout_marginTop="10.0dp" android:text="@string/home_theme_effieicnt_text" style="@style/bmw_orange_id8_main_page_icon_title" />
        <com.android.launcher2.popuView.MarqueeTextView android:id="@id/main_theme_effieicnt_enabled" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dp" android:text="@string/home_theme_enabled" android:layout_marginStart="40.0dp" android:layout_marginEnd="40.0dp" style="@style/bmw_orange_id8_main_page_icon_text_style" />
    </FrameLayout>
</LinearLayout>
